ProjetCompil/Verif/Test/fail/typeNonCompatible2.cas
program
   A : 1..5;
   B : 1..5;
   C : 1..5;
begin
    A := B and C;
end.
